--- a/truthlist/templates/truthlist/login.html
+++ b/truthlist/templates/truthlist/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="d-flex justify-content-center">
-    <form class="card mt-5 p-5" style="min-width: 600px;" action="{% url 'login' %}" method="POST">{% csrf_token %}
+    <form class="card mt-5 p-5" action="{% url 'login' %}" method="POST">{% csrf_token %}
         <h1 class="text-center">Login</h1>
         <div class="form-group">
             <label for="exampleInputEmail1">Username</label>
