--- a/truthlist/templates/truthlist/register.html
+++ b/truthlist/templates/truthlist/register.html
@@ -5,7 +5,7 @@
 
 
 <div class="d-flex justify-content-center">
-    <form class="card mt-5 p-5" style="min-width: 600px;" action="{% url 'register' %}" method="POST">{% csrf_token %}
+    <form class="card mt-5 p-5" action="{% url 'register' %}" method="POST">{% csrf_token %}
         <h1 class="text-center">Register</h1>
         <div class="form-group">
             <label for="firstname">First Name</label>
