--- a/truthlist/templates/truthlist/assessment.html
+++ b/truthlist/templates/truthlist/assessment.html
@@ -4,7 +4,7 @@
 
 
 
-<form class="container my-5" action="{% url 'assessment' %}" method="POST">
+<form class="container my-5" style="overflow-x: scroll;" action="{% url 'assessment' %}" method="POST">
     {% csrf_token %}
     <h2 class="">Assessment</h2>
     <table class="table mt-3">   <!-- This contsructs the table */-->
