--- a/truthlist/templates/truthlist/profile.html
+++ b/truthlist/templates/truthlist/profile.html
@@ -4,7 +4,7 @@
 
 
 
-<form class="container my-5">
+<form class="container my-5" style="overflow-x: scroll;">
     <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
     
         <h2>
