--- a/truthlist/templates/truthlist/reasons.html
+++ b/truthlist/templates/truthlist/reasons.html
@@ -20,7 +20,7 @@ tr,th,thead,td {
 
     </style>
 
-<div class="container mt-5">
+<div class="container mt-5" style="overflow-x: scroll;">
     <h3># {{question.question}}</h1>
     {% if reasons %}
         <p class="mt-4">I believe this because:</p>
