--- a/truthlist/templates/truthlist/category.html
+++ b/truthlist/templates/truthlist/category.html
@@ -7,7 +7,7 @@
 <div class="container mt-5">
     <h2 class="">All Categories</h2>
         <table class="table mt-3">
-            <thead style="position: sticky; top: 60px; z-index: 1; background-color: white;  background-color: #ffffff;box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);;text-align : center;word-wrap: normal; border-radius: 15px;     padding: 10px;box-shadow: 6px 4px 8px;text-align: center; "">
+            <thead style="position: sticky; top: 60px; z-index: 1; background-color: white;  background-color: #ffffff;box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);;text-align : center;word-wrap: normal; border-radius: 15px;     padding: 10px;box-shadow: 6px 4px 8px;text-align: center; ">
             <tr style="  background-color:#081C8D;box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);;text-align : center;word-wrap: normal ;color:#FFFFFF">
                 <th scope="col">#</th>
                 <th scope="col">Category</th>
