--- a/truthlist/templates/truthlist/download_certificate.html
+++ b/truthlist/templates/truthlist/download_certificate.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="container my-5">
+<div class="container my-5" style="overflow-x: scroll;">
     <form action="{% url 'download_certificate' %}" method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-success">Download</button>
