--- a/truthlist/templates/truthlist/pending_questions.html
+++ b/truthlist/templates/truthlist/pending_questions.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="container mt-5">
+<div class="container mt-5" style="overflow-x: scroll;">
     <h2 class="">Pending Questions</h2>
     {% if questions %}
         <table class="table mt-3">
