--- a/truthlist/templates/truthlist/public_believes.html
+++ b/truthlist/templates/truthlist/public_believes.html
@@ -14,7 +14,7 @@
 
 
 
-<form class="container" >
+<form class="container" style="overflow-x: scroll;" >
     <h2 class="responsive-table" > </h2>
     <table class="table-header" >
         <thead class="table-header" style="position: sticky; top: 60px; z-index: 1;  background-color: #081C8D;box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);word-wrap: normal; border-radius: 15px;box-shadow: 6px 4px 8px;text-align: center; " >
