--- a/truthlist/templates/truthlist/home.html
+++ b/truthlist/templates/truthlist/home.html
@@ -4,7 +4,7 @@
 
 
 
-<div style="background-image: url('{% static 'truthlist/logo_Writing.jpg' %}'); background-position: center; background-size: 100%;display: block; margin-left: auto; margin-right: auto;width: 90%;;">
+<div style="background-image: url('{% static 'truthlist/LadyJustice.png' %}'); background-position: center; background-size: 100%;display: block; margin-left: auto; margin-right: auto;width: 90%;;">
     <div class="container" style="display: flex;   height: 90vh;text-align: left;color:#FFFFFF">
        
     </div>
