--- a/truthlist/templates/truthlist/add_new_question.html
+++ b/truthlist/templates/truthlist/add_new_question.html
@@ -27,7 +27,7 @@
             <label for="is_fundamental">Is Fundamental</label>
             <input type="checkbox" name="is_fundamental" id="is_fundamental">
         </div>
-        <button type="submit" class="btn btn-primary">Add Believe</button>
+        <button type="submit" class="btn btn-primary">Add Belief</button>
     </form>
 </div>
 
