--- a/truthlist/templates/truthlist/contact.html
+++ b/truthlist/templates/truthlist/contact.html
@@ -34,7 +34,7 @@
 
 <script>
     function sendMail() {
-        const mailto = "hello@example.com";
+        const mailto = "fourteenmoonproductions@gmail.com";
         const subject = document.getElementById("subject").value;
         const fullname = document.getElementById("fullname").value;
         const email = document.getElementById("email").value;
