--- a/truthlist/templates/truthlist/navbar.html
+++ b/truthlist/templates/truthlist/navbar.html
@@ -39,7 +39,7 @@
       <rect y="60" width="80" height="10"></rect>
     </svg>
   </div>
-  <div style="margin-right: 9%;margin-left: 24%">
+  <div style="display: flex;margin-right: 1%;margin-left: 3%">
     <h2 class="title-h1">
       <a href="{%url 'home'%}" class="title-name" style="color: black;">
         FACILITATING THE SEARCH FOR TRUTH
